app/styles/main.css
/* ... */
#add-property h3 {
  font-weight: 400;
}
#add-property a {
  font-weight: 400;
}
.close-add-property {
  margin-top: 20px;
  margin-left: 180px;
}
.close-add-property a {
  text-transform: uppercase;
  font-size: 90%;
  color: #5f7378;
  border: 0;
  padding: 0 5px;
  border-radius: 3px;
}
.close-add-property a:hover {
  background: #5f7378;
  color: #f9f9f9;
}
.property-address {
  margin: -5px 0 30px 0;
  line-height: 100%;
  color: #6a8186;
}
.image-carousel div {
  margin-right: 10px;
}
.slick-prev {
  margin-left: -5px;
}
.slick-next {
  right: -15px !important;
}
.slick-prev:before,
.slick-next:before {
  color: #5f7378 !important;
}
.slick-prev:hover:before,
.slick-next:hover:before {
  color: #3ab4ad !important;
}
.tenant-overview {
  margin-bottom: 40px;
  margin-left: -10px;
  background: #efefef;
  border-radius: 10px;
}
.tenant-overview td {
  padding: 6px 10px;
  vertical-align: top;
}
.tenant-photo img {
  max-width: 115px;
  border-radius: 10px;
}
.tenant-description {
  font-size: 95%;
}
.tenant-description .tenant-name {
  font-weight: 400;
  font-size: 110%;
}
.tenant-description .tenant-item {
  color: #6a8186;
}
.tenant-description .tenant-income {
  font-size: 90%;
  font-style: italic;
  color: #6a8186;
}
.maintenance-status {
  margin-bottom: 40px;
}
ul.maintenance {
  border: 1px solid #ececec;
  border-radius: 10px;
  padding: 0;
  margin-top: 10px;
  margin-left: -10px;
  width: 100%;
  max-width: 700px;
}
ul.maintenance li {
  list-style-type: none;
  padding: 6px 10px;
  border-bottom: 1px solid #ececec;
}
ul.maintenance li:last-child {
  border: 0;
}
li.maintenance-title {
  background: #5f7378;
  color: #f9f9f9;
  border-top-right-radius: 10px;
  border-top-left-radius: 10px;
  font-weight: 400;
  font-size: 110%;
}
.maintenance .maintenance-item:hover {
  background: #f1f1f1;
}
.maintenance li a {
  display: block;
  width: 100%;
  color: #34495e;
  border: 0;
  transition: 0;
  -moz-transition: 0;
  -webkit-transition: 0;
  -ms-transition: 0;
  -o-transition: 0;
}
.maintenance a:hover {
  color: #4ca7d4;
}
.maintenance span {
  color: #8ea0a5;
  font-style: italic;
  font-size: 80%;
  margin-left: 15px;
}
.maintenance-author {
  color: #5f7378;
  font-size: 85%;
}
.maintenance-future {
  font-size: 90%;
}
.maintenance-future span {
  text-transform: uppercase;
  font-weight: 400;
  color: #5f7378;
  font-style: normal;
  margin-left: 0;
}
img.forgot-password {
  display: block;
  margin: 0 auto 20px auto;
  width: 250px;
}
.validation-success {
  opacity: 1;
  display: block;
  position: absolute;
  right: -7.2px;
  bottom: 2.8px;
  font-size: 28.8px;
  width: 36px;
  height: 36px;
  line-height: 36px;
  text-align: center;
  border-radius: 36px;
  color: #3AB4AD;
  transition: all ease-out 0.32s; }
  .validation-success:after {
    display: block;
    content: '\e013';
    font-family: 'Glyphicons Halflings'; }
  .validation-success.ng-hide {
    transition-delay: 0s;
    transition: all ease-out 0.12s;
    opacity: 0;
    transform: rotate(360deg); }

.ng-hide-remove li {
  opacity: 0; }

.validation {
  color: #fff;
  margin: 0;
  position: relative;
  font-size: 14px;
  overflow: visible;
  background: #E15E5B; }
  .validation ul {
    display: block;
    overflow: hidden; }
  .validation li {
    display: block;
    line-height: 1;
    background: #E15E5B;
    position: absolute;
    right: -4px;
    top: -24px;
    text-align: center;
    font-weight: bold;
    padding: 2px 10px;
    color: #fff;
    transform: rotate(0deg);
    transition: all ease-in 0.2s;
    opacity: 1;
    transition-delay: 0s; }
    .validation li.ng-enter {
      opacity: 0;
      top: 0; }
    .validation li.ng-leave {
      transition: all ease-in 0s;
      opacity: 0; }
*:focus + .validation li {
  background-color: #63bff8 !important; }
input.ng-touched.ng-invalid:not(.ng-valid), textarea.ng-touched.ng-invalid:not(.ng-valid), select.ng-touched.ng-invalid:not(.ng-valid) {
  border-color: #E15E5B; }
input:focus, input:focus.ng-touched.ng-invalid:not(.ng-valid), textarea:focus, textarea:focus.ng-touched.ng-invalid:not(.ng-valid), select:focus, select:focus.ng-touched.ng-invalid:not(.ng-valid) {
  border-color: #63bff8; }
input.ng-valid-required.ng-valid:not(.ng-invalid), textarea.ng-valid-required.ng-valid:not(.ng-invalid), select.ng-valid-required.ng-valid:not(.ng-invalid) {
  border-color: #3AB4AD; }
form[class*="ng-invalid"] button.btn {
  background: #63bff8;
  transition: none; }
form button.btn {
  transition: all ease-in 0.5s;
  background: #3AB4AD; }

@media only screen and (max-width: 1024px) {
  h1 {
    font-size: 230%;
  }
  h2 {
    font-size: 210%;
  }
  h1 {
    font-size: 250%;
  }
  h3 {
    font-size: 170%;
  }
  h4 {
    font-size: 130%;
  }
  p.large {
    font-size: 150%;
  }
  p.medium {
    font-size: 140%;
  }
  p.small {
    font-size: 120%;
  }
  .btn-large {
    font-size: 150%;
    height: 56px;
  }
  .btn-medium {
    font-size: 110%;
    height: 46px;
  }
  .rent-status td.name {
    min-width: 0;
  }
  .add-property {
    position: relative;
    top: 0;
    left: 0;
  }
}
@media only screen and (max-width: 768px) {
  h1 {
    font-size: 250%;
  }
  h2 {
    font-size: 220%;
  }
  p.large {
    font-size: 130%;
  }
  p.medium {
    font-size: 120%;
  }
  p.small {
    font-size: 110%;
  }
}
/* ... */

